--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,18 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.posgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.4-1206-jdbc4</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
