--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,17 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
-        <dependency>
-            <groupId>org.posgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>9.4-1206-jdbc4</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.posgresql</groupId>-->
+            <!--<artifactId>postgresql</artifactId>-->
+            <!--<version>9.4-1206-jdbc4</version>-->
+        <!--</dependency>-->
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.1.4</version>
+        </dependency>
 
         <dependency>
             <groupId>jstl</groupId>
