--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,12 @@ db.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect
 db.hibernate.show_sql=true
 db.entitymanager.packages.to.scan=com.javamaster.model
 db.hibernate.hbm2ddl.auto = create
+
+#Mail service configuration
+mail.smtp.starttls.enable=true
+mail.smtp.ssl.trust=smtp.gmail.com
+mail.smtp.user=andryuha955@gmail.com
+mail.smtp.password=cvbn1970
+mail.smtp.port=587
+mail.smtp.auth=true
+mail.smtp.host=smtp.gmail.com
