--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@ db.hibernate.hbm2ddl.auto = create
 #Mail service configuration
 mail.smtp.starttls.enable=true
 mail.smtp.ssl.trust=smtp.gmail.com
-mail.smtp.user=andryuha955@gmail.com
-mail.smtp.password=cvbn1970
+mail.smtp.user=server_email
+mail.smtp.password=secret
 mail.smtp.port=587
 mail.smtp.auth=true
 mail.smtp.host=smtp.gmail.com
