--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -70,10 +70,12 @@
             <version>4.0.0.RELEASE</version>
         </dependency>
 
+
+
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <version>4.0.0.Final</version>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.2.17.Final</version>
         </dependency>
 
         <dependency>
