--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ db.hibernate.hbm2ddl.auto = create
 #Mail service configuration
 mail.smtp.starttls.enable=true
 mail.smtp.ssl.trust=smtp.gmail.com
-mail.smtp.user=server-email
+mail.smtp.user=change
 mail.smtp.password=secret
 mail.smtp.port=587
 mail.smtp.auth=true
