--- a/pom.xml
+++ b/pom.xml
@@ -124,11 +124,22 @@
             <version>5.4.1.Final</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>4.1.4.RELEASE</version>
+        </dependency>
+
+        <!--for pdf generator-->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.4</version>
         </dependency>
 
     </dependencies>
