add - Reservation, refactor - Job

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ db.driver=org.postgresql.Driver
 db.url=jdbc:postgresql://baasu.db.elephantsql.com:5432/iurszlro
 db.username=iurszlro
 db.password=_7-DyTJ7CVZ3qwzI8kDOYIp0DiHAeqBC
+spring.datasource.maxActive = 4
 
 #Hibernate Configuration
 db.hibernate.dialect=org.hibernate.dialect.PostgreSQL82Dialect
