--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ db.hibernate.hbm2ddl.auto = create
 #Mail service configuration
 mail.smtp.starttls.enable=true
 mail.smtp.ssl.trust=smtp.gmail.com
-mail.smtp.user=mail
-mail.smtp.password=pass
+mail.smtp.user=andriismetanko@gmail.com
+mail.smtp.password=cvbn1970
 mail.smtp.port=587
 mail.smtp.auth=true
 mail.smtp.host=smtp.gmail.com
